@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY,
     int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }

class HeroAircraft {
    - instance: HeroAircraft
    - shootNum: int
    - power: int
    - direction: int
    - HeroAircraft(int locationX, int locationY,
     int speedX, int speedY, int hp)
    + getInstance(): HeroAircraft
    + forward(): void
    + shoot(): List<BaseBullet>
}

abstract EnemyAircraft {
    - shootStrategy: ShootStrategy
    + EnemyAircraft(int locationX, int locationY, int speedX,
     int speedY, int hp, ShootStrategy strategy)
    + forward(): void
    + dropProp(): LinkedList<AbstractProp>
    + shoot(): List<BaseBullet>
}

class MobEnemyAircraft {
    + MobEnemyAircraft(int locationX, int locationY, int speedX,
     int speedY, int power, ShootStrategy strategy)
}

class EliteEnemyAircraft {
    + EliteEnemyAircraft(int locationX, int locationY,
    int speedX,int speedY, int power, ShootStrategy strategy)
}

class ElitePlusEnemyAircraft {
    + ElitePlusEnemyAircraft(int locationX, int locationY, int speedX,
     int speedY, int power, ShootStrategy strategy)
}

class EliteProEnemyAircraft {
    + EliteProEnemyAircraft(int locationX, int locationY, int speedX,
     int speedY, int power, ShootStrategy strategy)
    + dropProp(): LinkedList<AbstractProp>
}

class BossEnemyAircraft {
    + BossEnemyAircraft(int locationX, int locationY, int speedX,
     int speedY, int power, ShootStrategy strategy)
    + dropProp(): LinkedList<AbstractProp>
}

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- EnemyAircraft
EnemyAircraft <|-- MobEnemyAircraft
EnemyAircraft <|-- MobEnemyAircraft
EnemyAircraft <|-- EliteEnemyAircraft
EnemyAircraft <|-- ElitePlusEnemyAircraft
EnemyAircraft <|-- EliteProEnemyAircraft
EnemyAircraft <|-- BossEnemyAircraft


abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY,
     int speedX, int speedY)
    + forward(): void
    + applyEffect(AbstractAircraft  aircraft)
}

class BloodProp {
    - maxHpRecoveryAmount
    + BloodProp(int locationX, int locationY,
     int speedX, int speedY)
    + applyEffect(AbstractAircraft aircraft)
}

class BombProp {
    + BulletPlusProp(int locationX, int locationY,
     int speedX, int speedY)
    + applyEffect(AbstractAircraft aircraft)
}

class BulletProp {
    + BulletProp(int locationX, int locationY,
     int speedX, int speedY)
    + applyEffect(AbstractAircraft aircraft)
}

class BulletPlusProp {
    + BulletPlusProp(int locationX, int locationY,
     int speedX, int speedY)
    + applyEffect(AbstractAircraft aircraft)
}

class FreezeProp {
    + FreezeProp(int locationX, int locationY,
     int speedX, int speedY)
    + applyEffect(AbstractAircraft aircraft)
}

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp
AbstractProp <|-- BulletPlusProp
AbstractProp <|-- FreezeProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

@enduml